--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/nragent-pcap
+/decode-example
 
 # Created by https://www.gitignore.io/api/go,vim
 # Edit at https://www.gitignore.io/?templates=go,vim
